--- a/personal-account-5.html
+++ b/personal-account-5.html
@@ -4,7 +4,7 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta http-equiv="X-UA-Compatible" content="ie=edge">
-	<title>Status - Личный кабинет - Мои отзывы</title>
+	<title>Status - Личный кабинет - Мои записи</title>
 	<link rel="shortcut icon" href="images/favicon.png" type="image/png">
 	<link rel="stylesheet" href="css/bootstrap.min.css" />
 	<link rel="stylesheet" href="css/swiper-bundle.min.css" />
@@ -63,13 +63,13 @@
 				<ol class="breadcrumb">
 					<li class="breadcrumb-item"><a href="index.html">Главная</a></li>
 					<li class="breadcrumb-item"><a href="personal-account-1.html">Личный кабинет</a></li>
-					<li class="breadcrumb-item"><a href="personal-account-4.html">Мои отзывы</a></li>
+					<li class="breadcrumb-item"><a href="personal-account-5.html">Мои записи</a></li>
 				</ol>
 			</nav>
 		</div>
 
 		<section id="sec-16">
-			<h1 class="inner mb-md-5">Мои отзывы</h1>
+			<h1 class="inner mb-md-5">Мои записи</h1>
 			<div class="d-md-none mobile-nav mb-4">
 				<div class="container">
 					<nav class="pa-menu">
@@ -83,11 +83,11 @@
 							<div class="swiper-slide">
 								<a href="personal-account-3.html">Мои заказы</a>
 							</div>
-							<div class="swiper-slide swiper-slide-active">
-								<a href="personal-account-4.html" class="active">Мои отзывы</a>
-							</div>
 							<div class="swiper-slide">
-								<a href="personal-account-5.html">Мои записи</a>
+								<a href="personal-account-4.html">Мои отзывы</a>
+							</div>
+							<div class="swiper-slide swiper-slide-active">
+								<a href="personal-account-5.html" class="active">Мои записи</a>
 							</div>
 						</div>
 					</nav>
@@ -108,162 +108,25 @@
 									<a href="personal-account-3.html">Мои заказы</a>
 								</li>
 								<li>
-									<a href="personal-account-4.html" class="active">Мои отзывы</a>
+									<a href="personal-account-4.html">Мои отзывы</a>
 								</li>
 								<li>
-									<a href="personal-account-5.html">Мои записи</a>
+									<a href="personal-account-5.html" class="active">Мои записи</a>
 								</li>
 							</ul>
 						</nav>
 					</div>
 					<div class="col-md-9 col-xl-10">
-						<div class="pa-review mb-4">
-							<div class="row gx-xxl-5">
-								<div class="d-none d-lg-block col-4 col-xl-3">
-									<img src="img/team/natalia.jpg" class="pa-review-img">
-								</div>
-								<div class="col-lg-8 col-xl-9">
-									<div class="d-flex justify-content-between align-items-start align-items-xl-center">
-										<div class="font-2">
-											<div class="f_15 fw_5 mb-1">Наталья Ворон</div>
-											<div class="accent">Топ - стилист, колорист, универсал, технолог краски HIPERTIN, эстетический - трихолог.</div>
-										</div>
-										<div class="rating ms-3 ms-xl-5 pt-2 pt-xl-0">
-											<svg class="grade" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
-												<path d="M12 2L15.09 8.26L22 9.27L17 14.14L18.18 21.02L12 17.77L5.82 21.02L7 14.14L2 9.27L8.91 8.26L12 2Z"></path>
-											</svg>
-											<svg class="grade" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
-												<path d="M12 2L15.09 8.26L22 9.27L17 14.14L18.18 21.02L12 17.77L5.82 21.02L7 14.14L2 9.27L8.91 8.26L12 2Z"></path>
-											</svg>
-											<svg class="grade" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
-												<path d="M12 2L15.09 8.26L22 9.27L17 14.14L18.18 21.02L12 17.77L5.82 21.02L7 14.14L2 9.27L8.91 8.26L12 2Z"></path>
-											</svg>
-											<svg class="grade" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
-												<path d="M12 2L15.09 8.26L22 9.27L17 14.14L18.18 21.02L12 17.77L5.82 21.02L7 14.14L2 9.27L8.91 8.26L12 2Z"></path>
-											</svg>
-											<svg class="grade" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
-												<path d="M12 2L15.09 8.26L22 9.27L17 14.14L18.18 21.02L12 17.77L5.82 21.02L7 14.14L2 9.27L8.91 8.26L12 2Z"></path>
-											</svg>
-										</div>
-									</div>
-									<div class="row row-cols-2 mt-3 mt-xl-4 font-2">
-										<div class="d-flex align-items-center">
-											<img src="img/icons/content_cut-gray.svg" alt="Услуга" class="icon-1">
-											<div class="ms-2 ms-xl-4">Услуга: <span class="light-gray">Сложное окрашивание</span></div>
-										</div>
-										<div class="d-flex align-items-center">
-											<img src="img/icons/calendar_today-gray.svg" alt="Дата посещения" class="icon-1">
-											<div class="ms-2 ms-xl-4">Дата посещения: <span class="light-gray">09.09.2021</span></div>
-										</div>
-									</div>
-									<div class="font-2 light-gray mt-3 mt-xl-4">
-										<p>Опыт работы более 10-и лет, постоянное повышение квалификации. Обучение Казахстан, Новосибирск, Москва, Итальянская школа ALDO COPPOLA</p>
-										<p>Выполнение любых сложных работ как в стрижках, так и в окрашиваниях, выход из черного цвета в светлый тон без ломкости волос.</p>
-									</div>
-									<div class="d-flex justify-content-between align-items-center mt-3 mt-xl-4">
-										<div class="font-2 light-gray">
-											<span>Опубликованно</span><span class="ms-2 ms-xl-4">09.09.21</span>
-										</div>
-										<div class="d-flex align-items-center">
-											<button type="button" class="lightest-gray fw_5 f_09" data-bs-toggle="modal" data-bs-target="#review-edit">
-												<img src="img/icons/edit.svg" alt="" class="icon-2">
-												<span class="bb_1 d-none d-sm-inline">Редактировать</span>
-											</button>
-											<button type="button" class="lightest-gray fw_5 f_09 ms-3 ms-xl-5" data-bs-toggle="modal" data-bs-target="#review-delete">
-												<img src="img/icons/delete.svg" alt="" class="icon-2">
-												<span class="bb_1 d-none d-sm-inline">Удалить</span>
-											</button>
-										</div>
-									</div>
-								</div>
-							</div>
-						</div>
-						<div class="pa-review mb-4">
-							<div class="row gx-xxl-5">
-								<div class="d-none d-lg-block col-4 col-xl-3">
-									<img src="img/team/natalia.jpg" class="pa-review-img">
-								</div>
-								<div class="col-lg-8 col-xl-9">
-									<div class="d-flex justify-content-between align-items-start align-items-xl-center">
-										<div class="font-2">
-											<div class="f_15 fw_5 mb-1">Наталья Ворон</div>
-											<div class="accent">Топ - стилист, колорист, универсал, технолог краски HIPERTIN, эстетический - трихолог.</div>
-										</div>
-										<div class="rating ms-3 ms-xl-5 pt-2 pt-xl-0">
-											<svg class="grade" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
-												<path d="M12 2L15.09 8.26L22 9.27L17 14.14L18.18 21.02L12 17.77L5.82 21.02L7 14.14L2 9.27L8.91 8.26L12 2Z"></path>
-											</svg>
-											<svg class="grade" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
-												<path d="M12 2L15.09 8.26L22 9.27L17 14.14L18.18 21.02L12 17.77L5.82 21.02L7 14.14L2 9.27L8.91 8.26L12 2Z"></path>
-											</svg>
-											<svg class="grade" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
-												<path d="M12 2L15.09 8.26L22 9.27L17 14.14L18.18 21.02L12 17.77L5.82 21.02L7 14.14L2 9.27L8.91 8.26L12 2Z"></path>
-											</svg>
-											<svg class="grade" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
-												<path d="M12 2L15.09 8.26L22 9.27L17 14.14L18.18 21.02L12 17.77L5.82 21.02L7 14.14L2 9.27L8.91 8.26L12 2Z"></path>
-											</svg>
-											<svg class="grade" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
-												<path d="M12 2L15.09 8.26L22 9.27L17 14.14L18.18 21.02L12 17.77L5.82 21.02L7 14.14L2 9.27L8.91 8.26L12 2Z"></path>
-											</svg>
-										</div>
-									</div>
-									<div class="row row-cols-2 mt-3 mt-xl-4 font-2">
-										<div class="d-flex align-items-center">
-											<img src="img/icons/content_cut-gray.svg" alt="Услуга" class="icon-1">
-											<div class="ms-2 ms-xl-4">Услуга: <span class="light-gray">Сложное окрашивание</span></div>
-										</div>
-										<div class="d-flex align-items-center">
-											<img src="img/icons/calendar_today-gray.svg" alt="Дата посещения" class="icon-1">
-											<div class="ms-2 ms-xl-4">Дата посещения: <span class="light-gray">09.09.2021</span></div>
-										</div>
-									</div>
-									<div class="font-2 light-gray mt-3 mt-xl-4">
-										<p>Опыт работы более 10-и лет, постоянное повышение квалификации. Обучение Казахстан, Новосибирск, Москва, Итальянская школа ALDO COPPOLA</p>
-										<p>Выполнение любых сложных работ как в стрижках, так и в окрашиваниях, выход из черного цвета в светлый тон без ломкости волос.</p>
-									</div>
-									<div class="d-flex justify-content-between align-items-center mt-3 mt-xl-4">
-										<div class="font-2 light-gray">
-											<span>Публикация отклонена</span>
-											<img src="img/icons/info.svg" title="Причины отклонения публикации" class="icon-2 ms-2 ms-xl-4">
-										</div>
-										<div class="d-flex align-items-center">
-											<button type="button" class="lightest-gray fw_5 f_09" data-bs-toggle="modal" data-bs-target="#review-edit">
-												<img src="img/icons/edit.svg" alt="" class="icon-2">
-												<span class="bb_1 d-none d-sm-inline">Редактировать</span>
-											</button>
-											<button type="button" class="lightest-gray fw_5 f_09 ms-3 ms-xl-5" data-bs-toggle="modal" data-bs-target="#review-delete">
-												<img src="img/icons/delete.svg" alt="" class="icon-2">
-												<span class="bb_1 d-none d-sm-inline">Удалить</span>
-											</button>
-										</div>
-									</div>
-								</div>
-							</div>
-						</div>
-						<div class="row row-cols-lg-2 mt-4 mt-md-5">
+						<div class="booking">
 							<div>
-								<nav aria-label="Page navigation" class="mx-auto ms-lg-0">
-									<ul class="pagination">
-										<li class="page-item"><a class="btn_main btn_xs f_08 btn_3" href="#">В начало</a></li>
-										<li class="page-item"><a class="page-link" href="#">...</a></li>
-										<li class="page-item"><a class="page-link" href="#">1</a></li>
-										<li class="page-item"><a class="page-link active" href="#">2</a></li>
-										<li class="page-item"><a class="page-link" href="#">3</a></li>
-										<li class="page-item"><a class="page-link" href="#">4</a></li>
-										<li class="page-item"><a class="page-link" href="#">5</a></li>
-										<li class="page-item"><a class="page-link" href="#">6</a></li>
-										<li class="page-item"><a class="page-link" href="#">...</a></li>
-										<li class="page-item"><a class="btn_main btn_xs f_08 btn_3" href="#">Дальше</a></li>
-									</ul>
-								</nav>
-							</div>
-							<div class="mt-3 mt-lg-0">
-								<div class="d-flex align-items-center justify-content-center justify-content-lg-end">
-									<div class="f_08 font-2 me-3">Перейти на страницу</div>
-									<input type="number" class="mini f_08 me-3">
-									<button type="button" class="f_08 btn_3 btn_main btn_xs">Перейти</button>
+								<div>
+									<img src="img/icons/content_cut.svg" alt="">
+									<div class="f_12">Услуга: Сложное окрашивание</div>
 								</div>
 							</div>
+							<button type="button" class="fw_5 lightest-gray">
+								<span class="bb_1">Отменить запись</span>
+							</button>
 						</div>
 					</div>
 				</div>
@@ -415,87 +278,6 @@
 						<li><a href="contacts.html">Контакты</a></li>
 					</ul>
 				</nav>
-			</div>
-		</div>
-	</div>
-
-	<!-- review edit -->
-	<div class="modal fade" id="review-edit" tabindex="-1" aria-hidden="true">
-		<div class="modal-dialog modal-lg">
-			<div class="modal-content p-sm-5">
-				<h4>Оставьте отзыв о работе мастера</h4>
-				<form action="">
-					<div class="row gy-4">
-						<div class="col-4">Оценка работы:</div>
-						<div class="col-8">
-							<div id="rating">
-								<input id="star-5" type="radio" name="reviewStars" value="5">
-								<label title="отлично" for="star-5"></label>
-
-								<input id="star-4" type="radio" name="reviewStars" value="4">
-								<label title="хорошо" for="star-4"></label>
-
-								<input id="star-3" type="radio" name="reviewStars" value="3" checked>
-								<label title="нормально" for="star-3"></label>
-
-								<input id="star-2" type="radio" name="reviewStars" value="2">
-								<label title="неудовлетворительно" for="star-2"></label>
-
-								<input id="star-1" type="radio" name="reviewStars" value="1">
-								<label title="плохо" for="star-1"></label>
-							</div>
-						</div>
-						<div class="col-4">Дата посещения:</div>
-						<div class="col-8">
-							<input type="date" value="2018-07-22" class="white w-100">
-						</div>
-						<div class="col-4">Услуга:</div>
-						<div class="col-8">
-							<select class="white inp-style w-100">
-								<option value="none" disabled>Выберите услугу</option>
-								<option value="Услуга 1" class="dark-gray">Услуга 1</option>
-								<option value="Услуга 2" selected class="dark-gray">Услуга 2</option>
-								<option value="Услуга 3" class="dark-gray">Услуга 3</option>
-							</select>
-						</div>
-						<div class="col-12">
-							<textarea rows="4" placeholder="Ваш комментарий" class="white w-100">Наталья лучший мастер по окрашиванию из всех у кого я была. Исправила плачевную ситуацию после неудачного мелирования в другом салоне, когда я была уже в отчаянии. Сделала все идеально, как я и хотела,  а также подобрала подходящий уход. Вежливый, отзывчивый мастер, прислушывающийся к мнению и желанию клиента. Для меня это самое важное. Теперь на  окрашивание буду ходить только к ней.</textarea>
-						</div>
-					</div>
-					<button type="submit" class="btn_main btn_1 mx-auto mt-4" data-bs-target="#confirmation" data-bs-toggle="modal" data-bs-dismiss="modal">
-						<span class="f_09 text-capitalize">Редактировать отзыв</span>
-					</button>
-					<div class="text-center f_09 mt-4">Нажимая “Обубликовать отзыв”, вы соглашаетесь <a href="#" class="accent">правилами публикации</a>.</div>
-				</form>
-				<button type="button" class="btn-close" data-bs-dismiss="modal">
-					<svg viewBox="0 0 26 26" xmlns="http://www.w3.org/2000/svg">
-						<path d="M23.0001 2.99995L13.345 12.9999L23.0001 22.9999"/>
-						<path d="M2.99997 22.9999L13.3447 13L2.99997 3"/>
-					</svg>
-				</button>
-			</div>
-		</div>
-	</div>
-
-	<!-- review delete -->
-	<div class="modal fade" id="review-delete" tabindex="-1" aria-hidden="true">
-		<div class="modal-dialog modal-lg">
-			<div class="modal-content p-4 p-sm-5">
-				<div class="font-2 f_12 text-center mb-5">Вы действительно хотите удалить отзыв?</div>
-				<div class="d-flex">
-					<button type="button" class="btn_main btn_2">
-						<span class="f_09 text-capitalize">Отмена</span>
-					</button>
-					<button type="button" class="btn_main btn_1 ms-4">
-						<span class="f_09 text-capitalize">Удалить</span>
-					</button>
-				</div>
-				<button type="button" class="btn-close" data-bs-dismiss="modal">
-					<svg viewBox="0 0 26 26" xmlns="http://www.w3.org/2000/svg">
-						<path d="M23.0001 2.99995L13.345 12.9999L23.0001 22.9999"/>
-						<path d="M2.99997 22.9999L13.3447 13L2.99997 3"/>
-					</svg>
-				</button>
 			</div>
 		</div>
 	</div>
